# SunClock

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.json  tmp.txt
cmake/: windeploy.cmake
res/: airports.csv  airports.json  config.json  resources.qrc  sky.frag  sky.vert  skyTexture.frag  style.css  styleClockBasic.css  styleClockUsa.css
src/: SolarAzEl.cpp  SolarAzEl.h  airportdb.cpp  airportdb.h  airportsdata.cpp  airportsdata.h  blockwidget.cpp  blockwidget.h  clock.cpp  clock.h  clockapp.cpp  clockapp.h  clockdata.cpp  clockdata.h  clockdef.cpp  clockdef.h  clockwidget.cpp  clockwidget.h  config.cpp  config.h  csv.cpp  csv.h  geolocation.h  gridwidget.cpp  gridwidget.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  panel.cpp  panel.h  qtutils.cpp  qtutils.h  renderimage.cpp  renderimage.h  roundedrectangleshape.cpp  scalinglabel.cpp  scalinglabel.h  sfutil.cpp  (+10 more)
src/clockfaces/: abstractclockface.cpp  abstractclockface.h  clockbasic.cpp  clockbasic.h  clockusa.cpp  clockusa.h  graphicsview.cpp  graphicsview.h
tmp/: skycolor.cpp  skycolor.h  utils.h
tools/: update-airport-data.py
